--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about/about.html">About</a></li>
             <li><a href="skills/skills.html">Skills</a></li>
-            <li><a href="education/education.html">Education</a></li>
+            <li><a href="blog/blog.html">Blog</a></li>
             <li><a href="contact/contact.html">Contact</a></li>
           </ul>
         </div>
